more permissive package access required for dse