@@ -57,9 +57,9 @@ public class NodeToolTest extends BaseIntegrationTest {
     cmd.addArgument("-Dstargate.libdir=" + starterJar.getParentFile().getCanonicalPath());
 
     // Java 11+ requires these flags to allow reflection to work
-    cmd.addArgument("--add-exports");
+    cmd.addArgument("--add-opens");
     cmd.addArgument("java.base/jdk.internal.ref=ALL-UNNAMED");
-    cmd.addArgument("--add-exports");
+    cmd.addArgument("--add-opens");
     cmd.addArgument("java.base/jdk.internal.misc=ALL-UNNAMED");
 
     cmd.addArgument("-jar");
